--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,13 @@
   <p></p>
   <div id="elemento2"></div>
   <ul>
-    <li></li>
+    <li class="type"></li>
     <li></li>   
   </ul>
   
   <!-- Scripts -->
   <script src="./scripts.js"></script>
+  
   
 </body>
 </html>
